syntax = "proto3";

enum EditorEvent {
    CreateDoc = 0;
    UpdateDoc = 1;
    ReadDoc = 2;
}
